add all styles to the project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="images/logo.png" alt="logo">
             </a>
             <ul class="header-nav-list">
-                <li>
+                <li class="header-nav-list-main">
                     <a href="#">Головна</a>
                 </li>
                 <li>
@@ -33,8 +33,9 @@
                 </li>
             </ul>
             <button type="button" class="nav-button">Увійти</button>
-            <p>ENG</p>
-            <p>UA</p>
+            <p class="header-nav-paragraph">ENG</p>
+            <img src="images/switcher1.png" alt="switcher">
+            <p class="header-nav-paragraph">UA</p>
 
         </nav>
     </header>
@@ -72,7 +73,7 @@
                     </a>
                 </li>
             </ul>
-            <button type="button" class="hero-button">Приєднатися до клану</button>
+            <button type="button" class="hero-button">Приєднатися до <br> клану</button>
         </section>
        
         <!-- Main -->
@@ -82,7 +83,7 @@
                 “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ <br> ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.” 
             </h1>
             <p class="main-paragraph">Джейк Саллі</p>
-            <img src="images/butterfly.png" alt="img">
+            <img class="main-image" src="images/butterfly1.png" alt="img">
         </section>
         
             <button type="button" class="main-button">Дивитись трейлер</button>
@@ -92,7 +93,7 @@
             “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ <br> ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”
             </h1>
             <p class="main-paragraph">Джейк Саллі</p>
-            <img src="images/butterfly.png" alt="img">
+            <img src="images/butterfly1.png" alt="img">
         </section>
         <section class="main-section-language">
             <h2 class="main-header-language">Вчимо мову На’ві</h2>
@@ -104,7 +105,7 @@
                 </li>
                 <li>
                     <p class="main-paragraph-language" >Як справи?</p>
-                    <img src="images/butterfly.png" alt="butterfly">
+                    <img src="images/butterfly1.png" alt="butterfly">
                     <p class="main-paragraph-translation" >Ngaru lu fpom srak?</p>
                 </li>
                 <li>
@@ -119,7 +120,7 @@
                 </li>
                 <li>
                     <p class="main-paragraph-language">Я бачу тебе</p>
-                    <img src="images/butterfly.png" alt="butterfly">
+                    <img src="images/butterfly1.png" alt="butterfly">
                     <p class="main-paragraph-translation">Oel ngati kameie</p>
                 </li>
                 <li>
@@ -136,7 +137,7 @@
             ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”
             </h1>
             <p class="main-paragraph">Нейтірі</p>
-            <img src="images/butterfly.png" alt="img">
+            <img src="images/butterfly1.png" alt="img">
         </section>
     </main>
     <!-- Footer -->
